# binary-io

./: .gitignore  .hlint.yaml  .stylish-haskell.yaml  ChangeLog.md  ReadMe.md  binary-io.cabal  cabal.project  communication.cabal  hie.yaml
.github/workflows/: cabal.yml
lib/Communication/: Channel.hs  Message.hs  Process.hs  Stream.hs
lib/Data/Binary/: IO.hs
lib/Data/Binary/IO/: Lifted.hs
lib/Data/Binary/IO/Internal/: AwaitNotify.hs
test/: Main.hs
test/Data/Binary/: IOSpec.hs
test/Data/Binary/IO/Internal/: AwaitNotifySpec.hs
