cabal-version:
  >= 1.10

name:
  binary-io

version:
  1.0.0

author:
  Ole

build-type:
  Simple

library
  default-language:
    Haskell2010

  ghc-options:
    -Wall -Wno-name-shadowing

  build-depends:
    base,
    bytestring,
    binary,
    deepseq

  hs-source-dirs:
    lib

  exposed-modules:
    Data.Binary.IO
