cabal-version:
  >= 1.10

name:
  binary-io

version:
  1.0.0

category:
  Data, Parsing, IO

synopsis:
  Read and write values of types that implement Binary from and to Handles

description:
  Read and write values of types that implement Binary from and to Handles
  .
  See module "Data.Binary.IO".

author:
  Ole Krüger <haskell-binary-io@vprsm.de>

maintainer:
  Ole Krüger <haskell-binary-io@vprsm.de>

homepage:
  https://github.com/vapourismo/binary-io

license:
  BSD3

license-file:
  LICENSE

extra-source-files:
  ChangeLog.md

build-type:
  Simple

source-repository head
  type: git
  location: git://github.com/vapourismo/binary-io.git

library
  default-language:
    Haskell2010

  ghc-options:
    -Wall -Wextra -Wno-name-shadowing

  build-depends:
    base == 4.*,
    bytestring,
    binary >= 0.7.2

  hs-source-dirs:
    lib

  exposed-modules:
    Data.Binary.IO
