cabal-version:
  >= 1.10

name:
  communication

version:
  0

author:
  Ole

build-type:
  Simple

library
  default-language:
    Haskell2010

  ghc-options:
    -Wall -Wno-name-shadowing

  build-depends:
    base,
    bytestring,
    binary,
    mtl,
    transformers,
    hashable,
    concurrency,
    exceptions

  hs-source-dirs:
    lib

  exposed-modules:
    Communication
    Communication.Message
    Communication.Channel
    Communication.Stream
